added classes and prefix

--- a/evaluation/multiclass_application.yaml
+++ b/evaluation/multiclass_application.yaml
@@ -40,6 +40,13 @@ source_files:
 
 target_file: "./testapplication.root"
 
+classes:
+    - hww
+    - dy
+    - wjets
+    - tt
+    - vv
+
 #features = training variables
 features:
     - mjj
