--- a/training/multiclass_MSSM_HWW_training.yaml
+++ b/training/multiclass_MSSM_HWW_training.yaml
@@ -213,35 +213,32 @@ global_weight: 1.
 
 #features = training variables
 features:
+    - detajj
+    - dphilep1jet1
+    - dphilep1jet2
+    - dphilep2jet1
+    - dphilep2jet2
+    - dphill
+    - dphilmet
+    - dphilmet1
+    - dphilmet2
+    - jeteta1
+    - jeteta2
+    - jetmass1
+    - jetmass2
     - mjj
-    - m_vis
-    - mt_1
-    - mt_2
-    - ptvis
-    - pt_tt
-    - dijetpt
-    - met
-    - dijetphi
-    - jdeta
-    - pt_1
-    - pt_2
-    - eta_2
-    - jpt_1
-    - jpt_2
-    - jphi_2
-    - jm_1
-    - jm_2
-    - bpt_1
-    - bpt_2
-    - beta_1
-    - beta_2
-    - bphi_1
-    - bphi_2
-    - njets
-    - nbtag
-    - mt_llmet
-    - pZetaMissVis
-    - dcosphi
+    - mll
+    - mth
+    - mtw1
+    - mtw2
+    - nbjet
+    - njet
+    - pTWW
+    - ptll
+    - dphijet1met
+    - dphijet2met
+    - jetpt1
+    - jetpt2
 
 train_test_split: 0.75
 
