--- a/preprocessing/configs/createTrainingsset_MSSM_HWW.yaml
+++ b/preprocessing/configs/createTrainingsset_MSSM_HWW.yaml
@@ -40,7 +40,7 @@ processes:
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_GluGluHToWWTo2L2Nu_M250.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_GluGluHToWWTo2L2Nu_M270.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M300.root
-        cut_string: "True"
+        cut_string: "trigger==1"
         weight_string: "1.0"
         class: hww120_300
 
@@ -51,11 +51,11 @@ processes:
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M450.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M500.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M550.root
-            - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M600.root
+            #- /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M600.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M650.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M700.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M750.root
-        cut_string: "True"
+        cut_string: "trigger==1"
         weight_string: "1.0"
         class: hww350_750
 
@@ -68,7 +68,7 @@ processes:
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M2000.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M2500.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M3000.root
-        cut_string: "True"
+        cut_string: "trigger==1"
         weight_string: "1.0"
         class: hww800_3000
 
@@ -77,7 +77,7 @@ processes:
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_DYJetsToLL_M-10to50.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_DYJetsToTT_MuEle_M-50__part0.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_DYJetsToTT_MuEle_M-50__part1.root
-        cut_string: "True"
+        cut_string: "trigger==1"
         weight_string: "1.0"
         class: DY
 
@@ -85,7 +85,7 @@ processes:
         files:
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_GluGluWWTo2L2Nu_MCFM.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_WWTo2L2Nu.root
-        cut_string: "True"
+        cut_string: "trigger==1"
         weight_string: "1.0"
         class: WW
 
@@ -95,7 +95,7 @@ processes:
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_WWZ.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_WZZ.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_ZZZ.root
-        cut_string: "True"
+        cut_string: "trigger==1"
         weight_string: "1.0"
         class: VVV
 
@@ -118,7 +118,7 @@ processes:
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_ZZTo2L2Q__part0.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_ZZTo2L2Q__part1.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_ZZTo2L2Q__part2.root
-        cut_string: "True"
+        cut_string: "trigger==1"
         weight_string: "1.0"
         class: DiBoson
 
@@ -202,7 +202,7 @@ processes:
             - /net/scratch_cms3b/fackeldey/artus/HWW/wjets_data/latino_DoubleMuon_Run2016C-03Feb2017-v1__part0.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/wjets_data/latino_SingleMuon_Run2016G-03Feb2017-v1__part0.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/wjets_data/latino_MuonEG_Run2016E-03Feb2017-v1.root
-        cut_string: "True"
+        cut_string: "trigger==1"
         weight_string: "(fakeW2l_ele_mva_90p_Iso2016_mu_cut_Tight80x)*(METFilter_DATA)"
         class: WJets
 
@@ -233,6 +233,6 @@ processes:
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_TTTo2L2Nu__part18.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_TTTo2L2Nu__part19.root
             - /net/scratch_cms3b/fackeldey/artus/HWW/latino/latino_TTTo2L2Nu__part20.root
-        cut_string: "True"
+        cut_string: "trigger==1"
         weight_string: "1.0"
         class: Top
