--- a/training/configs/multiclass_MSSM_HWW_training.yaml
+++ b/training/configs/multiclass_MSSM_HWW_training.yaml
@@ -1,3 +1,7 @@
+trainingssets:
+    - /net/scratch_cms3b/fackeldey/trainingssets/fold0_MSSM_HWW_trainingsset.root
+    - /net/scratch_cms3b/fackeldey/trainingssets/fold1_MSSM_HWW_trainingsset.root
+
 class_weights:
     hww120_300: 1.0
     hww350_750: 1.0
@@ -9,9 +13,22 @@ class_weights:
     WJets: 1.0
     Top: 1.0
 
-output_path: /home/mf278754/master/
+classes:
+    - hww120_300
+    - hww350_750
+    - hww800_3000
+    - DY
+    - WW
+    - VVV
+    - DiBoson
+    - WJets
+    - Top
+
+output_path: /net/scratch_cms3b/fackeldey/
 
 global_weight: 1.
+
+event_weights: training_weight
 
 #features = training variables
 features:
@@ -43,3 +60,5 @@ features:
     - jetpt2
 
 train_test_split: 0.75
+
+#trainings_weight_file: "MSSM_training/weights/TMVAmulticlassification_PyKeras_MSSM_HWW.weights.xml"
